// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse function should collapse a node with white-space set to "normal" while its parent has white-space set to "pre" 1`] = `
<TBlock tagName="div" styles={{ whiteSpace: "pre" }}>
   <TPhrasing anonymous styles={{ whiteSpace: "pre" }}>
     <TText tagName="span" data=" This is nice " styles={{ whiteSpace: "pre" }} />
     <TText tagName="strong" data=" Should collapse" styles={{ whiteSpace: "normal" }} />
   </TPhrasing>
</TBlock>

`;

exports[`collapse function should collapse a tree such as specified in RFC002 example 1`] = `
<TBlock tagName="a" href="https://domain.com">
   <TPhrasing anonymous>
     <TText anonymous data="This is " />
     <TText tagName="span" data="phrasing content" />
   </TPhrasing>
   <TBlock tagName="img" src="https://domain.com/logo.jpg" />
   <TPhrasing anonymous>
     <TText anonymous data="and this is " />
     <TText tagName="strong" data="too" />
     <TText anonymous data="." />
   </TPhrasing>
</TBlock>

`;

exports[`collapse function should collapse adjacent tags 1`] = `
<TPhrasing tagName="span">
   <TText tagName="span" data="foo " />
   <TText tagName="span" data="bar" />
</TPhrasing>

`;

exports[`collapse function should collapse when white-space CSS property is not set 1`] = `
<TBlock tagName="div">
   <TPhrasing anonymous>
     <TText anonymous data="This is great!" />
   </TPhrasing>
</TBlock>

`;

exports[`collapse function should collapse when white-space CSS property is set to "normal" 1`] = `
<TBlock tagName="div" styles={{ whiteSpace: "normal" }}>
   <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
     <TText anonymous data="This is great!" styles={{ whiteSpace: "normal" }} />
   </TPhrasing>
</TBlock>

`;

exports[`collapse function should handle <br> tags 1`] = `
<TBlock tagName="p">
   <TPhrasing anonymous>
     <TText anonymous data="should" />
     <TText tagName="br" data="" />
     <TText anonymous data="collapse" />
   </TPhrasing>
</TBlock>

`;

exports[`collapse function should handle body tag 1`] = `
<TBlock tagName="body">
   <TBlock tagName="div">
     <TPhrasing anonymous>
       <TText tagName="span" data="Hello world!" />
     </TPhrasing>
   </TBlock>
</TBlock>

`;

exports[`collapse function should handle deeply nested HTML 1`] = `
<TBlock tagName="article">
   <TPhrasing anonymous>
     <TText anonymous data="First implicit paragraph." />
   </TPhrasing>
   <TBlock tagName="div">
     <TPhrasing anonymous>
       <TText anonymous data="Second implicit paragraph" />
     </TPhrasing>
     <TBlock tagName="p">
       <TPhrasing anonymous>
         <TText anonymous data="A new paragraph. " />
         <TText tagName="span" data="And a span within" />
       </TPhrasing>
       <TBlock tagName="img" src="https://domain.com/logo.jpg" />
     </TBlock>
   </TBlock>
</TBlock>

`;

exports[`collapse function should handle direct style inheritance 1`] = `
<TBlock tagName="div" styles={{ fontSize: 18, borderTopWidth: 20, borderRightWidth: 20, borderBottomWidth: 20, borderLeftWidth: 20 }}>
   <TPhrasing anonymous styles={{ fontSize: 18 }}>
     <TText tagName="span" data="This is nice!" styles={{ fontSize: 18, color: "red" }} />
   </TPhrasing>
</TBlock>

`;

exports[`collapse function should handle indirect style inheritance 1`] = `
<TBlock tagName="div" styles={{ fontSize: 18 }}>
   <TBlock tagName="div" styles={{ fontSize: 18, borderTopWidth: 20, borderRightWidth: 20, borderBottomWidth: 20, borderLeftWidth: 20 }}>
     <TPhrasing anonymous styles={{ fontSize: 18 }}>
       <TText anonymous data="This is great!" styles={{ fontSize: 18 }} />
     </TPhrasing>
   </TBlock>
</TBlock>

`;

exports[`collapse function should handle nested anchors 1`] = `
<TPhrasing tagName="a" href="https://domain.com">
   <TText anonymous data="This is " />
   <TText tagName="span" data="phrasing content" />
   <TText anonymous data=" " />
   <TPhrasing tagName="a" href="https://sub.domain.com">
     <TText anonymous data="and this is " />
     <TText tagName="strong" data="too" />
   </TPhrasing>
</TPhrasing>

`;

exports[`collapse function should hoist blocks recursively 1`] = `
<TBlock tagName="span">
   <TPhrasing anonymous>
     <TText anonymous data="Line1" />
   </TPhrasing>
   <TBlock tagName="strong">
     <TPhrasing anonymous>
       <TText anonymous data="Line2 " />
       <TText tagName="span" data="Line3" />
     </TPhrasing>
     <TBlock tagName="img" src="https://domain.com/logo.jpg" />
   </TBlock>
</TBlock>

`;

exports[`collapse function should not collapse when white-space CSS property is set to "pre" 1`] = `
<TBlock tagName="div" styles={{ whiteSpace: "pre" }}>
   <TPhrasing anonymous styles={{ whiteSpace: "pre" }}>
     <TText anonymous data="  This is great!  " styles={{ whiteSpace: "pre" }} />
   </TPhrasing>
</TBlock>

`;

exports[`collapse function should remove children from TPhrasing nodes which are empty after timming 1`] = `
<TPhrasing anonymous>
   <TText anonymous data="Foo" />
   <TText anonymous data=" Bar" />
</TPhrasing>

`;

exports[`collapse function should remove empty anonymous TPhrasing children from TPhrasing nodes 1`] = `
<TPhrasing anonymous />

`;

exports[`collapse function should support removeLineBreaksAroundEastAsianDiscardSet param 1`] = `
<TText tagName="span" data="⼀⿚" />

`;

exports[`collapse function should withold TEmpty nodes 1`] = `
<TBlock tagName="div">
   <TPhrasing anonymous>
     <TText tagName="span" data="Hi!" />
   </TPhrasing>
   <TEmpty tagName="link" href="mailto:don@company.com" />
</TBlock>

`;
